<resources>
    <string name="app_name">Geo Pet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Generic messages -->

    <!-- Pet Registration -->
    <string name="prompt_name">Nombre</string>
    <string name="prompt_type">Especie</string>
    <string name="prompt_gender">Sexo</string>
    <string name="prompt_race">Raza</string>
    <string name="prompt_description">Descripción</string>
    <string name="prompt_birth_date">Fecha aproximada de nacimiento</string>
    <string name="prompt_rescue_date">Fecha de rescate</string>
    <string name="prompt_status">Status</string>
    <string name="prompt_sterilized">¿Está esterilizado?</string>
    <string name="prompt_vaccines">Vacunas</string>
    <string name="prompt_dewormings">Desparacitaciones</string>
    <string name="prompt_evidences">Evidencias</string>
    <string name="prompt_date">Fecha</string>
    <string name="string_format_date">%4d-%02d-%02d</string>
    <string name="title_vaccines">VACUNAS</string>
    <string name="title_dewormings">DESPARASITACIONES</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_photo_required">Fotografía requerida</string>
    <string name="error_email_required">Correo requerido</string>
    <string name="error_pass_required">Contraseña requerida</string>
    <string name="prompt_select_option">Seleccione una opción...</string>
    <string name="alert_message_registration_error">Hubo un error al registrar su mascota. Intente más tarde.</string>
    <string name="alert_message_edit_error">Hubo un error al modificar su mascota. Intente más tarde.</string>

    <!-- Actions -->
    <string name="action_save">Guardar</string>
    <string name="action_add">Agregar</string>
    <string name="action_yes">Sí</string>
    <string name="action_no">No</string>


    <!-- TODO: fragment_adopter_registration string values-->
    <string name="tittle_adopter_registration">Registro adoptante</string>
    <string name="prompt_adopter_name">Nombres</string>
    <string name="prompt_adopter_last_name">Apellido paterno</string>
    <string name="prompt_adopter_second_surname">Apellido materno</string>
    <string name="prompt_adopter_birth_date">Fecha de cumpleaños</string>
    <string name="prompt_adopter_email">Correo electronico</string>
    <string name="prompt_adopter_password">Contraseña</string>
    <string name="prompt_adopter_phone">Número telefónico</string>
    <string name="prompt_adopter_address">Dirección</string>
    <string name="register_adopter_registration">Registrar</string>
    <string name="gender_adopter_registration">Genero:</string>
    <string name="birth_date_adopter_registration">Fecha de cumpleaños:</string>
    <string name="genred_male_adopter_registration">Hombre</string>
    <string name="gender_female_adopter_registration">Mujer</string>
    <string name="action_accept">Aceptar</string>
    <string name="alert_message_pet_saved">Mascota guardada correctamente</string>

    <!-- Rescuer Registration-->
    <string name="tittle_rescuer_registration">Registro de Rescatista</string>
    <string name="prompt_rescuer_name">Nombre</string>
    <string name="prompt_rescuer_description">Descripción</string>
    <string name="prompt_rescuer_start_date">Inicio de actividades</string>
    <string name="prompt_rescuer_email">Correo</string>
    <string name="prompt_rescuer_password">Contraseña</string>
    <string name="prompt_rescuer_phone">Teléfono</string>
    <string name="prompt_rescuer_address">Direccion</string>
    <string name="action_register">Registrar</string>

    <!-- Titles -->
    <string name="title_register_pets_fragment">Mis Mascotas</string>
    <string name="title_pet_detail_fragment">Mi Mascota</string>
    <string name="title_pet_registration_fragment">Mi Mascota</string>
    <string name="title_selection_fragment">Bienvenido</string>
    <string name="title_adopter_login_fragment">Bienvenido Adoptante</string>
    <string name="title_rescuer_login_fragment">Bienvenido Rescatista</string>
    <string name="title_adopter_registration_fragment">Registro Adoptante</string>
    <string name="title_rescuer_registration_fragment">Registro Rescatista</string>

    <!-- Login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_login">Entrar</string>
    <string name="title_login">Iniciar sesión</string>
    <string name="failure_login">Usuario o Contraseña incorrecta</string>

    <!-- Fragment assign adopter to pet -->
    <string name="tittle_assign_adopter_to_pet">Asignar adoptante a la mascota</string>
    <string name="title_adopter_pets_fragment">Mis Mascotas</string>
    <string name="title_send_evidence_fragment">Enviar Evidencia</string>
    <string name="title_assign_adopter_fragment">Asignar Adoptante</string>
    <string name="action_send_evidence">Enviar evidencia</string>
    <string name="action_assing_adopter">Asignar adoptante</string>

    <!-- Fragment Pet Detail -->
    <string name="pet_detail_title">Detalle de Mascota</string>
    <string name="pet_detail_name">Nombre Mascota</string>
    <string name="pet_detail_sex">Sexo</string>
    <string name="pet_detail_race">Raza</string>
    <string name="pet_detail_description">Descripción</string>
    <string name="pet_detail_birthdate">Fecha Nacimiento</string>
    <string name="pet_detail_recue_date">Fecha Rescate</string>
    <string name="pet_detail_type">Tipo</string>
    <string name="pet_detail_sterilized">¿Está esterilizado?</string>
    <string name="pet_detail_vaccines">Vacunas</string>
    <string name="pet_detail_deworming">Desparacitaciones</string>
    <string name="pet_detail_status">Estado</string>
    <string name="pet_detail_evidences">Evidencias</string>


    <!-- Fragment Send Evidence -->
    <string name="send_evidence_title">Enviar Evidencia</string>
    <string name="send_evidence_photo_error">Photo error</string>
    <string name="send_evidence_date">Fecha</string>
    <string name="send_evidence_comments">Comentarios</string>
    <string name="send_evidence_ok">"Evidencia enviada correctamente"</string>
    <string name="send_evidence_error">"Hubo un error al enviar evidencia. Intente más tarde"</string>

    <!-- Camera -->
    <string name="title_photo_taker_fragment">Captura de fotografía</string>
    <string name="title_photo_preview_fragment">Captura de fotografía</string>
    <string name="title_video_taker_fragment">Captura de video</string>
    <string name="title_video_preview_fragment">Captura de video</string>
</resources>